fixed spacing on table and form divs

--- a/workout.css
+++ b/workout.css
@@ -6,6 +6,7 @@ table, th, td {
 	border-collapse: collapse;
 }
 */
+/*
 form {
 	margin-left: 10px;
 }
@@ -13,7 +14,7 @@ form {
 table {
 	margin-right: 10px;
 }
-
+*/
 h1 {
 	margin-left: 10px;
 }
@@ -26,6 +27,7 @@ h1 {
     transition-duration: 0.3s;
     transition-timing-function: initial;
     transition-delay: initial;
+    margin-left: 10px;
 }
 
 #card-form {
@@ -36,6 +38,8 @@ h1 {
     transition-duration: 0.3s;
     transition-timing-function: initial;
     transition-delay: initial;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #Delete {
